express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: express
  name: express
spec:
  replicas: 3
  selector:
    matchLabels:
      app: express
  template:
    metadata:
      labels:
        app: express
    spec:
      containers:
        - image: mongo-express
          name: express-container
          ports:
            - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: express-service
  labels:
    app: express-service
spec:
  selector:
    app: express
  type: NodePort
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30007
