mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - image: mongo
          name: mongo-container
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: storage
      volumes:
        - name: storage
          hostPath:
            path: /data/db

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  labels:
    app: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
