ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # ingressClassName: ingress-nginx # default ingressClassName of nginx default controller
  # tls:
  #   - hosts:
  #       - mimi123.com
  #     secretName: secret-tls
  rules:
    # - host: meomeo123.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: express-service
                port:
                  number: 8081
  # backend:
  #   service:
  #     name: express-service
  #     port:
  #       number: 8081
